--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -114,3 +114,11 @@
    color: "ff0000"
    description: "This pull request should not be merged yey"
 
+ - name: "Credfeto.Extensions.Linq"
+   color: "96f7d2"
+   description: "Changes in Credfeto.Extensions.Linq project"
+
+ - name: "Tests"
+   color: "0e8a16"
+   description: "Changes in Credfeto.Extensions.Linq.Tests project"
+
