--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -32,3 +32,7 @@
  - any: [ './**/*.md' ]
 "github-actions":
  - any: [ '.github/workflows/*.yml' ]
+"Credfeto.Extensions.Linq":
+ - any: [ 'src/Credfeto.Extensions.Linq/**/*' ]
+"Tests":
+ - any: [ 'src/Credfeto.Extensions.Linq.Tests/**/*' ]
