--- a/.github/actions/sarif/action.yml
+++ b/.github/actions/sarif/action.yml
@@ -20,6 +20,7 @@ runs:
 
     - if: ${{inputs.REPO_VISIBILITY == 'public' && hashfiles('${{github.workspace}}/results/**/*') != ''}}
       name: "Upload SARIF file for diagnostics"
+      id: sarif
       uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: ${{github.workspace}}/results
@@ -29,4 +30,6 @@ runs:
     - name: "Sarif Upload Summary"
       shell: bash
       working-directory: ${{github.workspace}}/results
-      run: echo "Sarif Upload COmpleted"
+      run: |
+         echo "Sarif Upload Completed"
+         echo "sarifId: ${{steps.sarif.outputs.sarif-id}}"
