--- a/.github/actions/sarif/action.yml
+++ b/.github/actions/sarif/action.yml
@@ -18,9 +18,10 @@ runs:
       working-directory: ${{github.workspace}}/results
       run: |
         ls -la
-        echo "Hash: ${{ hashfiles('${{github.workspace}}/results/**/*') }}"
+        echo "Hash: ${{ hashfiles('**/*.sarif') }}"
+        echo "SARIF_HASH=${{ hashfiles('**/*.sarif') }}" >> $GITHUB_ENV
 
-    - if: ${{inputs.REPO_VISIBILITY == 'public' && hashfiles('${{github.workspace}}/results/**/*') != ''}}
+    - if: ${{inputs.REPO_VISIBILITY == 'public' && env.SARIF_HASH != ''}}
       name: "Upload SARIF file for diagnostics"
       id: sarif
       uses: github/codeql-action/upload-sarif@v2
