--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -4,6 +4,7 @@
     <!-- Sarif -->
     <PropertyGroup Condition="$(EnableSarif)=='True'">
         <ErrorLog>$(SolutionDir)\..\results\$(MSBuildProjectName).sarif,version=2.1</ErrorLog>
-        <ReportAnalyzer>true</ReportAnalyzer>
+        <!-- Sarif -->
+        <ReportAnalyzer>false</ReportAnalyzer>
     </PropertyGroup>
 </Project>
