--- a/.github/actions/sarif/action.yml
+++ b/.github/actions/sarif/action.yml
@@ -24,6 +24,20 @@ runs:
         cat *.sarif
 
     - if: ${{inputs.REPO_VISIBILITY == 'public' && env.SARIF_HASH != ''}}
+      name: Violation Comments Action
+      uses: tomasbjerre/violation-comments-action@v1.0.5
+      with:
+        parser: SARIF
+        keepOldComments: true # remove the old comments, or keep them
+        commentTemplate: '{{violation.message}}'
+        maxNumberOfViolations: 999 # Will only post this many comments
+        severity: INFO # INFO, WARN or ERROR
+        commentOnlyChangedContent: true # Comment only if violations in the changed part of PR
+        commentOnlyChangedFiles: true # Comment only on the files that are changed in PR
+        createSingleFileComments: true # Comment several comments, for each violation
+        createCommentWithAllSingleFileComments: false # Create on big comment with all violations
+
+    - if: ${{inputs.REPO_VISIBILITY == 'public' && env.SARIF_HASH != ''}}
       name: "Upload SARIF file for diagnostics"
       id: sarif
       uses: github/codeql-action/upload-sarif@v2
