--- a/.github/actions/sarif/action.yml
+++ b/.github/actions/sarif/action.yml
@@ -21,7 +21,6 @@ runs:
         rm -rf *.Tests.sarif
         echo "Hash: ${{ hashfiles('**/*.sarif') }}"
         echo "SARIF_HASH=${{ hashfiles('**/*.sarif') }}" >> $GITHUB_ENV
-        cat *.sarif
 
     - if: ${{inputs.REPO_VISIBILITY == 'public' && env.SARIF_HASH != ''}}
       name: Violation Comments Action
@@ -38,7 +37,7 @@ runs:
         createSingleFileComments: true # Comment several comments, for each violation
         createCommentWithAllSingleFileComments: false # Create on big comment with all violations
 
-    - if: ${{inputs.REPO_VISIBILITY == 'public' && env.SARIF_HASH != ''}}
+    - if: ${{inputs.REPO_VISIBILITY == 'publicX' && env.SARIF_HASH != ''}}
       name: "Upload SARIF file for diagnostics"
       id: sarif
       uses: github/codeql-action/upload-sarif@v2
