--- a/.github/actions/sarif/action.yml
+++ b/.github/actions/sarif/action.yml
@@ -22,7 +22,7 @@ runs:
         echo "SARIF_HASH=${{ hashfiles('**/*.sarif') }}" >> $GITHUB_ENV
 
     - if: ${{github.event_name == 'pull_request' && env.SARIF_HASH != ''}}
-      name: Post SARIF findings in the pull request
+      name: "Post SARIF findings in the pull request"
       uses: sett-and-hive/sarif-to-comment-action@v1
       with:
         token: ${{ inputs.GITHUB_TOKEN }}
