[Dependencies] - Update .github/labeler.yml to match the template repo

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -34,5 +34,7 @@
  - any: [ '.github/workflows/*.yml' ]
 "Credfeto.Extensions.Linq":
  - any: [ 'src/Credfeto.Extensions.Linq/**/*' ]
+"Benchmarks":
+ - any: [ 'src/Credfeto.Extensions.Linq.Benchmarks/**/*' ]
 "Tests":
  - any: [ 'src/Credfeto.Extensions.Linq.Tests/**/*' ]
