--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -118,6 +118,10 @@
    color: "96f7d2"
    description: "Changes in Credfeto.Extensions.Linq project"
 
+ - name: "Benchmarks"
+   color: "96f7d2"
+   description: "Changes in Credfeto.Extensions.Linq.Benchmarks project"
+
  - name: "Tests"
    color: "0e8a16"
    description: "Changes in Credfeto.Extensions.Linq.Tests project"
