--- a/src/Credfeto.Extensions.Linq.Tests/Credfeto.Extensions.Linq.Tests.csproj
+++ b/src/Credfeto.Extensions.Linq.Tests/Credfeto.Extensions.Linq.Tests.csproj
@@ -34,6 +34,7 @@
     <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <EnforceExtendedAnalyzerRules>false</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Credfeto.Extensions.Linq\Credfeto.Extensions.Linq.csproj" />
