--- a/src/Credfeto.Extensions.Linq.Benchmarks/Credfeto.Extensions.Linq.Benchmarks.csproj
+++ b/src/Credfeto.Extensions.Linq.Benchmarks/Credfeto.Extensions.Linq.Benchmarks.csproj
@@ -29,7 +29,7 @@
     <NoWarn />
     <NuGetAudit>true</NuGetAudit>
     <NuGetAuditLevel>low</NuGetAuditLevel>
-    <NuGetAuditMode>direct</NuGetAuditMode>
+    <NuGetAuditMode>all</NuGetAuditMode>
     <Nullable>enable</Nullable>
     <OptimizationPreference>speed</OptimizationPreference>
     <OutputType>Exe</OutputType>
