--- a/src/Credfeto.Extensions.Linq.Benchmarks/Credfeto.Extensions.Linq.Benchmarks.csproj
+++ b/src/Credfeto.Extensions.Linq.Benchmarks/Credfeto.Extensions.Linq.Benchmarks.csproj
@@ -62,6 +62,7 @@
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CSharpier.MSBuild" Version="0.30.6" PrivateAssets="All" ExcludeAssets="runtime"/>
     <PackageReference Include="AsyncFixer" Version="1.6.0" PrivateAssets="All" ExcludeAssets="runtime" />
     <PackageReference Include="codecracker.CSharp" Version="1.1.0" PrivateAssets="All" ExcludeAssets="runtime" />
     <PackageReference Include="CSharpIsNullAnalyzer" Version="0.1.593" PrivateAssets="all" ExcludeAssets="runtime" />
