--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,23 +1,3 @@
- - name: "!!! WAITING FOR CLIENT PR"
-   color: "ffff00"
-   description: "Pull request needs a client pull request to be merged at the same time"
-
- - name: "!!! WAITING FOR ETHEREUM PR"
-   color: "ffff00"
-   description: "Pull request needs a server ethereum pull request to be merged at the same time"
-
- - name: "!!! WAITING FOR QA SIGNOFF"
-   color: "ffff00"
-   description: "Pull request needs a QA Signoff before it can be merged"
-
- - name: "!!! WAITING FOR SERVER PR"
-   color: "ffff00"
-   description: "Pull request needs a server pull request to be merged at the same time"
-
- - name: "!!! WAITING FOR WALLET PR"
-   color: "ffff00"
-   description: "Pull request needs a wallet pull request to be merged at the same time"
-
  - name: ".NET update"
    color: "a870c9"
    description: "Update to .net global.json"
@@ -48,15 +28,15 @@
 
  - name: "credfeto-extensions-linq"
    color: "96f7d2"
-   description: "Changes in $Credfeto.Extensions.Linq project"
+   description: "Changes in Credfeto.Extensions.Linq project"
 
  - name: "credfeto-extensions-linq-benchmarks"
    color: "96f7d2"
-   description: "Changes in $Credfeto.Extensions.Linq.Benchmarks project"
+   description: "Changes in Credfeto.Extensions.Linq.Benchmarks project"
 
  - name: "credfeto-extensions-linq-tests"
    color: "0e8a16"
-   description: "Changes in $Credfeto.Extensions.Linq.Tests project"
+   description: "Changes in Credfeto.Extensions.Linq.Tests project"
 
  - name: "dependencies"
    color: "0366d6"
@@ -73,10 +53,6 @@
  - name: "github-actions"
    color: "e09cf4"
    description: "Github actions workflow files"
-
- - name: "Legal Text"
-   color: "facef0"
-   description: "Legal text files"
 
  - name: "Markdown"
    color: "5319e7"
@@ -122,7 +98,7 @@
    color: "30027a"
    description: "Technical debt"
 
- - name: "unit-tests"
+ - name: "Unit Tests"
    color: "0e8a16"
    description: "Unit test and integration test projects"
 
