--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -34,9 +34,9 @@
    color: "96f7d2"
    description: "Changes in Credfeto.Extensions.Linq project"
 
- - name: "credfeto-extensions-linq-benchmarks"
-   color: "96f7d2"
-   description: "Changes in Credfeto.Extensions.Linq.Benchmarks project"
+ - name: "credfeto-extensions-linq-benchmarks-tests"
+   color: "0e8a16"
+   description: "Changes in Credfeto.Extensions.Linq.Benchmarks.Tests project"
 
  - name: "credfeto-extensions-linq-tests"
    color: "0e8a16"
